deployment/migration-assistant-solution/deployment-example/global-s3-assets/migration-assistant-for-amazon-opensearch-service-create-vpc.template
Description: (SO0290) - The AWS CloudFormation template for deployment of the migration-assistant-for-amazon-opensearch-service. Version v2.5.8
AWSTemplateFormatVersion: "2010-09-09"
Metadata:
  AWS::CloudFormation::Interface:
    ParameterGroups:
      - Label:
          default: Additional parameters
        Parameters:
          - Stage
    ParameterLabels: {}
Mappings:
  Solution:
    Config:
      CodeVersion: v2.5.8
      KeyPrefix: migration-assistant-for-amazon-opensearch-service/v2.5.8
      S3Bucket: solutions
      SendAnonymousUsage: "No"
      SolutionId: SO0290
  BootstrapEC2InstanceAmiMapEF3D2AB0:
    af-south-1:
      ami: ami-056f571bb0e6f424b
    ap-east-1:
      ami: ami-005362651c93532ef
    ap-east-2:
      ami: ami-07bd067b2afd36c9d
    ap-northeast-1:
      ami: ami-0d4aa492f133a3068
    ap-northeast-2:
      ami: ami-099099dff4384719c
    ap-northeast-3:
      ami: ami-0c3d48d3539dae8d5
    ap-south-1:
      ami: ami-0f9708d1cd2cfee41
    ap-south-2:
      ami: ami-058a677191f2d3b4b
    ap-southeast-1:
      ami: ami-088d74defe9802f14
    ap-southeast-2:
      ami: ami-0c462b53550d4fca8
    ap-southeast-3:
      ami: ami-06ab30fd4fdb3ed9d
    ap-southeast-4:
      ami: ami-0d42e9612aefb98da
    ap-southeast-5:
      ami: ami-01e13e3c781810a30
    ap-southeast-6:
      ami: ami-011236e3336b1fe14
    ap-southeast-7:
      ami: ami-0e4f6ae724df740e7
    ca-central-1:
      ami: ami-029c5475368ac7adc
    ca-west-1:
      ami: ami-080ada25b460a6622
    eu-central-1:
      ami: ami-08697da0e8d9f59ec
    eu-central-2:
      ami: ami-06bfd82c089bb1f7a
    eu-north-1:
      ami: ami-04c08fd8aa14af291
    eu-south-1:
      ami: ami-0f75ff17d5b995930
    eu-south-2:
      ami: ami-093f87ac3f1e31f91
    eu-west-1:
      ami: ami-04f25a69b566c844b
    eu-west-2:
      ami: ami-0336cdd409ab5eec4
    eu-west-3:
      ami: ami-0d8c6c2b092ebb980
    il-central-1:
      ami: ami-044c25ddea94bf84c
    me-central-1:
      ami: ami-0f661f38a53d919c7
    me-south-1:
      ami: ami-0115748e9cebc5543
    mx-central-1:
      ami: ami-0e439f4aa57d84983
    sa-east-1:
      ami: ami-07c0cae188e21a093
    us-east-1:
      ami: ami-052064a798f08f0d3
    us-east-2:
      ami: ami-077b630ef539aa0b5
    us-west-1:
      ami: ami-0b967c22fe917319b
    us-west-2:
      ami: ami-0caa91d6b7bee0ed0
    us-gov-west-1:
      ami: ami-08f42c51760f3e3af
    us-gov-east-1:
      ami: ami-0c16bde0528963329
Parameters:
  Stage:
    Type: String
    Default: dev
    Description: Specify the stage identifier which will be used in naming resources, e.g. dev,gamma,wave1
Resources:
  AppRegistry968496A3:
    Type: AWS::ServiceCatalogAppRegistry::Application
    Properties:
      Description: Service Catalog application to track and manage all your resources for the solution migration-assistant-for-amazon-opensearch-service
      Name:
        Fn::Join:
          - "-"
          - - migration-assistant-for-amazon-opensearch-service
            - Ref: AWS::Region
            - Ref: AWS::AccountId
            - Fn::Join:
                - ""
                - - Ref: Stage
                  - "-"
                  - Ref: AWS::Region
      Tags:
        Solutions:ApplicationType: AWS-Solutions
        Solutions:SolutionID: SO0290
        Solutions:SolutionName: migration-assistant-for-amazon-opensearch-service
        Solutions:SolutionVersion: v2.5.8
  AppRegistryAssociation:
    Type: AWS::ServiceCatalogAppRegistry::ResourceAssociation
    Properties:
      Application:
        Fn::GetAtt:
          - AppRegistry968496A3
          - Id
      Resource:
        Ref: AWS::StackId
      ResourceType: CFN_STACK
  DefaultApplicationAttributesFC1CC26B:
    Type: AWS::ServiceCatalogAppRegistry::AttributeGroup
    Properties:
      Attributes:
        applicationType: AWS-Solutions
        version: v2.5.8
        solutionID: SO0290
        solutionName: migration-assistant-for-amazon-opensearch-service
      Description: Attribute group for solution information
      Name:
        Fn::Join:
          - "-"
          - - Ref: AWS::Region
            - Fn::Join:
                - ""
                - - Ref: Stage
                  - "-"
                  - Ref: AWS::Region
            - attributes
  DefaultApplicationAttributesApplicationAttributeGroupAssociatione2d28d10144a1BCF953D:
    Type: AWS::ServiceCatalogAppRegistry::AttributeGroupAssociation
    Properties:
      Application:
        Fn::GetAtt:
          - AppRegistry968496A3
          - Id
      AttributeGroup:
        Fn::GetAtt:
          - DefaultApplicationAttributesFC1CC26B
          - Id
  BootstrapShellDoc:
    Type: AWS::SSM::Document
    Properties:
      Content:
        schemaVersion: "1.0"
        description: Document to hold regional settings for Session Manager
        sessionType: Standard_Stream
        inputs:
          cloudWatchLogGroupName: ""
          cloudWatchEncryptionEnabled: true
          cloudWatchStreamingEnabled: false
          kmsKeyId: ""
          runAsEnabled: false
          runAsDefaultUser: ""
          idleSessionTimeout: "60"
          maxSessionDuration: ""
          shellProfile:
            linux: cd /opensearch-migrations && sudo -s
      DocumentType: Session
      Name:
        Fn::Join:
          - ""
          - - BootstrapShellDoc-
            - Ref: Stage
            - "-"
            - Ref: AWS::Region
  BootstrapRole9F5149C7:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: sts:AssumeRole
            Effect: Allow
            Principal:
              Service: ec2.amazonaws.com
        Version: "2012-10-17"
      Description: EC2 Bootstrap Role
      ManagedPolicyArns:
        - Fn::Join:
            - ""
            - - "arn:"
              - Ref: AWS::Partition
              - :iam::aws:policy/AdministratorAccess
  BootstrapRoleDefaultPolicy73F5FAC5:
    Type: AWS::IAM::Policy
    Properties:
      PolicyDocument:
        Statement:
          - Action:
              - cloudformation:DescribeStackResource
              - cloudformation:SignalResource
            Effect: Allow
            Resource:
              Ref: AWS::StackId
        Version: "2012-10-17"
      PolicyName: BootstrapRoleDefaultPolicy73F5FAC5
      Roles:
        - Ref: BootstrapRole9F5149C7
  BootstrapInstanceProfile27016621:
    Type: AWS::IAM::InstanceProfile
    Properties:
      InstanceProfileName:
        Fn::Join:
          - ""
          - - bootstrap-instance-profile-
            - Ref: Stage
            - "-"
            - Ref: AWS::Region
      Roles:
        - Ref: BootstrapRole9F5149C7
  Vpc8378EB38:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.212.0.0/16
      EnableDnsHostnames: true
      EnableDnsSupport: true
      InstanceTenancy: default
      Tags:
        - Key: Name
          Value:
            Fn::Join:
              - ""
              - - migration-assistant-vpc-
                - Ref: Stage
  Vpcipv6cidr40D3CB78:
    Type: AWS::EC2::VPCCidrBlock
    Properties:
      AmazonProvidedIpv6CidrBlock: true
      VpcId:
        Ref: Vpc8378EB38
  VpcPublicSubnet1Subnet5C2D37C4:
    Type: AWS::EC2::Subnet
    Properties:
      AssignIpv6AddressOnCreation: true
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: ""
      CidrBlock: 10.212.0.0/18
      Ipv6CidrBlock:
        Fn::Select:
          - 0
          - Fn::Cidr:
              - Fn::Select:
                  - 0
                  - Fn::GetAtt:
                      - Vpc8378EB38
                      - Ipv6CidrBlocks
              - 4
              - "64"
      MapPublicIpOnLaunch: false
      Tags:
        - Key: aws-cdk:subnet-name
          Value: Public
        - Key: aws-cdk:subnet-type
          Value: Public
        - Key: Name
          Value:
            Fn::Join:
              - ""
              - - migration-assistant-public-subnet-1-
                - Ref: Stage
      VpcId:
        Ref: Vpc8378EB38
    DependsOn:
      - Vpcipv6cidr40D3CB78
  VpcPublicSubnet1RouteTable6C95E38E:
    Type: AWS::EC2::RouteTable
    Properties:
      Tags:
        - Key: Name
          Value:
            Fn::Join:
              - ""
              - - migration-assistant-public-subnet-1-
                - Ref: Stage
      VpcId:
        Ref: Vpc8378EB38
    DependsOn:
      - Vpcipv6cidr40D3CB78
  VpcPublicSubnet1RouteTableAssociation97140677:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: VpcPublicSubnet1RouteTable6C95E38E
      SubnetId:
        Ref: VpcPublicSubnet1Subnet5C2D37C4
    DependsOn:
      - Vpcipv6cidr40D3CB78
  VpcPublicSubnet1DefaultRoute3DA9E72A:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: VpcIGWD7BA715C
      RouteTableId:
        Ref: VpcPublicSubnet1RouteTable6C95E38E
    DependsOn:
      - Vpcipv6cidr40D3CB78
      - VpcVPCGWBF912B6E
  VpcPublicSubnet1DefaultRoute6A21265FB:
    Type: AWS::EC2::Route
    Properties:
      DestinationIpv6CidrBlock: ::/0
      GatewayId:
        Ref: VpcIGWD7BA715C
      RouteTableId:
        Ref: VpcPublicSubnet1RouteTable6C95E38E
    DependsOn:
      - Vpcipv6cidr40D3CB78
  VpcPublicSubnet1EIPD7E02669:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      Tags:
        - Key: Name
          Value:
            Fn::Join:
              - ""
              - - migration-assistant-public-subnet-1-
                - Ref: Stage
    DependsOn:
      - Vpcipv6cidr40D3CB78
  VpcPublicSubnet1NATGateway4D7517AA:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId:
        Fn::GetAtt:
          - VpcPublicSubnet1EIPD7E02669
          - AllocationId
      SubnetId:
        Ref: VpcPublicSubnet1Subnet5C2D37C4
      Tags:
        - Key: Name
          Value:
            Fn::Join:
              - ""
              - - migration-assistant-public-subnet-1-
                - Ref: Stage
    DependsOn:
      - Vpcipv6cidr40D3CB78
      - VpcPublicSubnet1DefaultRoute3DA9E72A
      - VpcPublicSubnet1DefaultRoute6A21265FB
      - VpcPublicSubnet1RouteTableAssociation97140677
  VpcPublicSubnet2Subnet691E08A3:
    Type: AWS::EC2::Subnet
    Properties:
      AssignIpv6AddressOnCreation: true
      AvailabilityZone:
        Fn::Select:
          - 1
          - Fn::GetAZs: ""
      CidrBlock: 10.212.64.0/18
      Ipv6CidrBlock:
        Fn::Select:
          - 1
          - Fn::Cidr:
              - Fn::Select:
                  - 0
                  - Fn::GetAtt:
                      - Vpc8378EB38
                      - Ipv6CidrBlocks
              - 4
              - "64"
      MapPublicIpOnLaunch: false
      Tags:
        - Key: aws-cdk:subnet-name
          Value: Public
        - Key: aws-cdk:subnet-type
          Value: Public
        - Key: Name
          Value:
            Fn::Join:
              - ""
              - - migration-assistant-public-subnet-2-
                - Ref: Stage
      VpcId:
        Ref: Vpc8378EB38
    DependsOn:
      - Vpcipv6cidr40D3CB78
  VpcPublicSubnet2RouteTable94F7E489:
    Type: AWS::EC2::RouteTable
    Properties:
      Tags:
        - Key: Name
          Value:
            Fn::Join:
              - ""
              - - migration-assistant-public-subnet-2-
                - Ref: Stage
      VpcId:
        Ref: Vpc8378EB38
    DependsOn:
      - Vpcipv6cidr40D3CB78
  VpcPublicSubnet2RouteTableAssociationDD5762D8:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: VpcPublicSubnet2RouteTable94F7E489
      SubnetId:
        Ref: VpcPublicSubnet2Subnet691E08A3
    DependsOn:
      - Vpcipv6cidr40D3CB78
  VpcPublicSubnet2DefaultRoute97F91067:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: VpcIGWD7BA715C
      RouteTableId:
        Ref: VpcPublicSubnet2RouteTable94F7E489
    DependsOn:
      - Vpcipv6cidr40D3CB78
      - VpcVPCGWBF912B6E
  VpcPublicSubnet2DefaultRoute63E63096C:
    Type: AWS::EC2::Route
    Properties:
      DestinationIpv6CidrBlock: ::/0
      GatewayId:
        Ref: VpcIGWD7BA715C
      RouteTableId:
        Ref: VpcPublicSubnet2RouteTable94F7E489
    DependsOn:
      - Vpcipv6cidr40D3CB78
  VpcPublicSubnet2EIP3C605A87:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      Tags:
        - Key: Name
          Value:
            Fn::Join:
              - ""
              - - migration-assistant-public-subnet-2-
                - Ref: Stage
    DependsOn:
      - Vpcipv6cidr40D3CB78
  VpcPublicSubnet2NATGateway9182C01D:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId:
        Fn::GetAtt:
          - VpcPublicSubnet2EIP3C605A87
          - AllocationId
      SubnetId:
        Ref: VpcPublicSubnet2Subnet691E08A3
      Tags:
        - Key: Name
          Value:
            Fn::Join:
              - ""
              - - migration-assistant-public-subnet-2-
                - Ref: Stage
    DependsOn:
      - Vpcipv6cidr40D3CB78
      - VpcPublicSubnet2DefaultRoute97F91067
      - VpcPublicSubnet2DefaultRoute63E63096C
      - VpcPublicSubnet2RouteTableAssociationDD5762D8
  VpcPrivateSubnet1Subnet536B997A:
    Type: AWS::EC2::Subnet
    Properties:
      AssignIpv6AddressOnCreation: true
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: ""
      CidrBlock: 10.212.128.0/18
      Ipv6CidrBlock:
        Fn::Select:
          - 2
          - Fn::Cidr:
              - Fn::Select:
                  - 0
                  - Fn::GetAtt:
                      - Vpc8378EB38
                      - Ipv6CidrBlocks
              - 4
              - "64"
      MapPublicIpOnLaunch: false
      Tags:
        - Key: aws-cdk:subnet-name
          Value: Private
        - Key: aws-cdk:subnet-type
          Value: Private
        - Key: Name
          Value:
            Fn::Join:
              - ""
              - - migration-assistant-private-subnet-1-
                - Ref: Stage
      VpcId:
        Ref: Vpc8378EB38
    DependsOn:
      - Vpcipv6cidr40D3CB78
  VpcPrivateSubnet1RouteTableB2C5B500:
    Type: AWS::EC2::RouteTable
    Properties:
      Tags:
        - Key: Name
          Value:
            Fn::Join:
              - ""
              - - migration-assistant-private-subnet-1-
                - Ref: Stage
      VpcId:
        Ref: Vpc8378EB38
    DependsOn:
      - Vpcipv6cidr40D3CB78
  VpcPrivateSubnet1RouteTableAssociation70C59FA6:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: VpcPrivateSubnet1RouteTableB2C5B500
      SubnetId:
        Ref: VpcPrivateSubnet1Subnet536B997A
    DependsOn:
      - Vpcipv6cidr40D3CB78
  VpcPrivateSubnet1DefaultRouteBE02A9ED:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId:
        Ref: VpcPublicSubnet1NATGateway4D7517AA
      RouteTableId:
        Ref: VpcPrivateSubnet1RouteTableB2C5B500
    DependsOn:
      - Vpcipv6cidr40D3CB78
  VpcPrivateSubnet1DefaultRoute6B45CB740:
    Type: AWS::EC2::Route
    Properties:
      DestinationIpv6CidrBlock: ::/0
      EgressOnlyInternetGatewayId:
        Ref: VpcEIGW61416F369
      RouteTableId:
        Ref: VpcPrivateSubnet1RouteTableB2C5B500
    DependsOn:
      - Vpcipv6cidr40D3CB78
  VpcPrivateSubnet2Subnet3788AAA1:
    Type: AWS::EC2::Subnet
    Properties:
      AssignIpv6AddressOnCreation: true
      AvailabilityZone:
        Fn::Select:
          - 1
          - Fn::GetAZs: ""
      CidrBlock: 10.212.192.0/18
      Ipv6CidrBlock:
        Fn::Select:
          - 3
          - Fn::Cidr:
              - Fn::Select:
                  - 0
                  - Fn::GetAtt:
                      - Vpc8378EB38
                      - Ipv6CidrBlocks
              - 4
              - "64"
      MapPublicIpOnLaunch: false
      Tags:
        - Key: aws-cdk:subnet-name
          Value: Private
        - Key: aws-cdk:subnet-type
          Value: Private
        - Key: Name
          Value:
            Fn::Join:
              - ""
              - - migration-assistant-private-subnet-2-
                - Ref: Stage
      VpcId:
        Ref: Vpc8378EB38
    DependsOn:
      - Vpcipv6cidr40D3CB78
  VpcPrivateSubnet2RouteTableA678073B:
    Type: AWS::EC2::RouteTable
    Properties:
      Tags:
        - Key: Name
          Value:
            Fn::Join:
              - ""
              - - migration-assistant-private-subnet-2-
                - Ref: Stage
      VpcId:
        Ref: Vpc8378EB38
    DependsOn:
      - Vpcipv6cidr40D3CB78
  VpcPrivateSubnet2RouteTableAssociationA89CAD56:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: VpcPrivateSubnet2RouteTableA678073B
      SubnetId:
        Ref: VpcPrivateSubnet2Subnet3788AAA1
    DependsOn:
      - Vpcipv6cidr40D3CB78
  VpcPrivateSubnet2DefaultRoute060D2087:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId:
        Ref: VpcPublicSubnet2NATGateway9182C01D
      RouteTableId:
        Ref: VpcPrivateSubnet2RouteTableA678073B
    DependsOn:
      - Vpcipv6cidr40D3CB78
  VpcPrivateSubnet2DefaultRoute6DDF1236D:
    Type: AWS::EC2::Route
    Properties:
      DestinationIpv6CidrBlock: ::/0
      EgressOnlyInternetGatewayId:
        Ref: VpcEIGW61416F369
      RouteTableId:
        Ref: VpcPrivateSubnet2RouteTableA678073B
    DependsOn:
      - Vpcipv6cidr40D3CB78
  VpcIGWD7BA715C:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value:
            Fn::Join:
              - ""
              - - migration-assistant-vpc-
                - Ref: Stage
  VpcVPCGWBF912B6E:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId:
        Ref: VpcIGWD7BA715C
      VpcId:
        Ref: Vpc8378EB38
  VpcEIGW61416F369:
    Type: AWS::EC2::EgressOnlyInternetGateway
    Properties:
      Tags:
        - Key: Name
          Value:
            Fn::Join:
              - ""
              - - migration-assistant-vpc-
                - Ref: Stage
      VpcId:
        Ref: Vpc8378EB38
  S3VpcEndpoint1F0CDE18:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      RouteTableIds:
        - Ref: VpcPrivateSubnet1RouteTableB2C5B500
        - Ref: VpcPrivateSubnet2RouteTableA678073B
        - Ref: VpcPublicSubnet1RouteTable6C95E38E
        - Ref: VpcPublicSubnet2RouteTable94F7E489
      ServiceName:
        Fn::Join:
          - ""
          - - com.amazonaws.
            - Ref: AWS::Region
            - .s3
      VpcEndpointType: Gateway
      VpcId:
        Ref: Vpc8378EB38
  logsVpcEndpointSecurityGroupAC2FD242:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Migration-Assistant-Infra-Create-VPC/logsVpcEndpoint/SecurityGroup
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic by default
          IpProtocol: "-1"
      SecurityGroupIngress:
        - CidrIp:
            Fn::GetAtt:
              - Vpc8378EB38
              - CidrBlock
          Description:
            Fn::Join:
              - ""
              - - "from "
                - Fn::GetAtt:
                    - Vpc8378EB38
                    - CidrBlock
                - :443
          FromPort: 443
          IpProtocol: tcp
          ToPort: 443
      VpcId:
        Ref: Vpc8378EB38
  logsVpcEndpoint032E6ACC:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      PrivateDnsEnabled: true
      SecurityGroupIds:
        - Fn::GetAtt:
            - logsVpcEndpointSecurityGroupAC2FD242
            - GroupId
      ServiceName:
        Fn::Join:
          - ""
          - - com.amazonaws.
            - Ref: AWS::Region
            - .logs
      SubnetIds:
        - Ref: VpcPrivateSubnet1Subnet536B997A
        - Ref: VpcPrivateSubnet2Subnet3788AAA1
      VpcEndpointType: Interface
      VpcId:
        Ref: Vpc8378EB38
  elasticfilesystemVpcEndpointSecurityGroupECB42CD1:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Migration-Assistant-Infra-Create-VPC/elasticfilesystemVpcEndpoint/SecurityGroup
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic by default
          IpProtocol: "-1"
      SecurityGroupIngress:
        - CidrIp:
            Fn::GetAtt:
              - Vpc8378EB38
              - CidrBlock
          Description:
            Fn::Join:
              - ""
              - - "from "
                - Fn::GetAtt:
                    - Vpc8378EB38
                    - CidrBlock
                - :443
          FromPort: 443
          IpProtocol: tcp
          ToPort: 443
      VpcId:
        Ref: Vpc8378EB38
  elasticfilesystemVpcEndpoint6435CF45:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      PrivateDnsEnabled: true
      SecurityGroupIds:
        - Fn::GetAtt:
            - elasticfilesystemVpcEndpointSecurityGroupECB42CD1
            - GroupId
      ServiceName:
        Fn::Join:
          - ""
          - - com.amazonaws.
            - Ref: AWS::Region
            - .elasticfilesystem
      SubnetIds:
        - Ref: VpcPrivateSubnet1Subnet536B997A
        - Ref: VpcPrivateSubnet2Subnet3788AAA1
      VpcEndpointType: Interface
      VpcId:
        Ref: Vpc8378EB38
  ecrapiVpcEndpointSecurityGroup449D3A58:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Migration-Assistant-Infra-Create-VPC/ecr.apiVpcEndpoint/SecurityGroup
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic by default
          IpProtocol: "-1"
      SecurityGroupIngress:
        - CidrIp:
            Fn::GetAtt:
              - Vpc8378EB38
              - CidrBlock
          Description:
            Fn::Join:
              - ""
              - - "from "
                - Fn::GetAtt:
                    - Vpc8378EB38
                    - CidrBlock
                - :443
          FromPort: 443
          IpProtocol: tcp
          ToPort: 443
      VpcId:
        Ref: Vpc8378EB38
  ecrapiVpcEndpointCCA70B2E:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      PrivateDnsEnabled: true
      SecurityGroupIds:
        - Fn::GetAtt:
            - ecrapiVpcEndpointSecurityGroup449D3A58
            - GroupId
      ServiceName:
        Fn::Join:
          - ""
          - - com.amazonaws.
            - Ref: AWS::Region
            - .ecr.api
      SubnetIds:
        - Ref: VpcPrivateSubnet1Subnet536B997A
        - Ref: VpcPrivateSubnet2Subnet3788AAA1
      VpcEndpointType: Interface
      VpcId:
        Ref: Vpc8378EB38
  ecrdkrVpcEndpointSecurityGroup9D0FF409:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Migration-Assistant-Infra-Create-VPC/ecr.dkrVpcEndpoint/SecurityGroup
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic by default
          IpProtocol: "-1"
      SecurityGroupIngress:
        - CidrIp:
            Fn::GetAtt:
              - Vpc8378EB38
              - CidrBlock
          Description:
            Fn::Join:
              - ""
              - - "from "
                - Fn::GetAtt:
                    - Vpc8378EB38
                    - CidrBlock
                - :443
          FromPort: 443
          IpProtocol: tcp
          ToPort: 443
      VpcId:
        Ref: Vpc8378EB38
  ecrdkrVpcEndpointF40451CA:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      PrivateDnsEnabled: true
      SecurityGroupIds:
        - Fn::GetAtt:
            - ecrdkrVpcEndpointSecurityGroup9D0FF409
            - GroupId
      ServiceName:
        Fn::Join:
          - ""
          - - com.amazonaws.
            - Ref: AWS::Region
            - .ecr.dkr
      SubnetIds:
        - Ref: VpcPrivateSubnet1Subnet536B997A
        - Ref: VpcPrivateSubnet2Subnet3788AAA1
      VpcEndpointType: Interface
      VpcId:
        Ref: Vpc8378EB38
  BootstrapSecurityGroupF430C916:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Migration-Assistant-Infra-Create-VPC/BootstrapSecurityGroup
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic by default
          IpProtocol: "-1"
        - CidrIpv6: ::/0
          Description: Allow all outbound ipv6 traffic by default
          IpProtocol: "-1"
      VpcId:
        Ref: Vpc8378EB38
  BootstrapEC2InstanceInstanceProfile987ED32E:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Roles:
        - Ref: BootstrapRole9F5149C7
  BootstrapEC2Instance36A69AF7c81e5c0208c7352b:
    Type: AWS::EC2::Instance
    Properties:
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: ""
      BlockDeviceMappings:
        - DeviceName: /dev/xvda
          Ebs:
            VolumeSize: 50
      IamInstanceProfile:
        Ref: BootstrapEC2InstanceInstanceProfile987ED32E
      ImageId:
        Fn::FindInMap:
          - BootstrapEC2InstanceAmiMapEF3D2AB0
          - Ref: AWS::Region
          - ami
      InstanceType: t3.large
      LaunchTemplate:
        LaunchTemplateName: MigrationAssistantInfraCreateVPCBootstrapEC2InstanceLaunchTemplateE970D098
        Version:
          Fn::GetAtt:
            - BootstrapEC2InstanceLaunchTemplate3BA48394
            - LatestVersionNumber
      SecurityGroupIds:
        - Fn::GetAtt:
            - BootstrapSecurityGroupF430C916
            - GroupId
      SubnetId:
        Ref: VpcPrivateSubnet1Subnet536B997A
      Tags:
        - Key: Name
          Value:
            Fn::Join:
              - ""
              - - bootstrap-instance-
                - Ref: Stage
                - "-"
                - Ref: AWS::Region
      UserData:
        Fn::Base64:
          Fn::Join:
            - ""
            - - |-
                #!/bin/bash
                # fingerprint: a75234c5a121054a
                (
                  set +e
                  /opt/aws/bin/cfn-init -v --region 
              - Ref: AWS::Region
              - " --stack "
              - Ref: AWS::StackName
              - |-2
                 --resource BootstrapEC2Instance36A69AF7c81e5c0208c7352b -c default
                  /opt/aws/bin/cfn-signal -e $? --region 
              - Ref: AWS::Region
              - " --stack "
              - Ref: AWS::StackName
              - |-2
                 --resource BootstrapEC2Instance36A69AF7c81e5c0208c7352b
                  cat /var/log/cfn-init.log >&2
                )
    DependsOn:
      - BootstrapRoleDefaultPolicy73F5FAC5
      - BootstrapRole9F5149C7
    CreationPolicy:
      ResourceSignal:
        Count: 1
        Timeout: PT5M
    Metadata:
      AWS::CloudFormation::Init:
        configSets:
          default:
            - config
        config:
          files:
            /opensearch-migrations/initBootstrap.sh:
              content: |-
                #!/bin/bash

                usage() {
                  echo "Usage: $0 [--tag <tag_name>] [--branch <branch_name>]"
                  exit 1
                }

                tag=""
                branch=""

                # Parse options
                while [[ "$#" -gt 0 ]]; do
                  case $1 in
                    --tag)
                      if [ -n "$branch" ]; then
                        echo "Error: You cannot specify both --tag and --branch."
                        usage
                      fi
                      tag="$2"
                      shift
                      ;;
                    --branch)
                      if [ -n "$tag" ]; then
                        echo "Error: You cannot specify both --tag and --branch."
                        usage
                      fi
                      branch="$2"
                      shift
                      ;;
                    *)
                      echo "Unknown parameter passed: $1"
                      usage
                      ;;
                  esac
                  shift
                done

                yum update && yum install -y git java-11-amazon-corretto-devel docker nodejs https://s3.amazonaws.com/session-manager-downloads/plugin/latest/linux_64bit/session-manager-plugin.rpm
                systemctl start docker
                git init
                git remote | grep "origin" || git remote add -f origin https://github.com/opensearch-project/opensearch-migrations.git

                if [ -n "$branch" ]; then
                  git checkout $branch
                elif [ -n "$tag" ]; then
                  git checkout tags/$tag
                else
                  latest_release_tag=$(curl -s https://api.github.com/repos/opensearch-project/opensearch-migrations/releases/latest | jq -r ".tag_name")
                  git checkout tags/$latest_release_tag
                fi

                cd deployment/cdk/opensearch-service-migration || exit

                if [[ -n "$VPC_ID" ]]; then
                  sed -i "s|<VPC_ID>|$VPC_ID|g" /opensearch-migrations/deployment/cdk/opensearch-service-migration/cdk.context.json
                fi
                if [[ -n "$STAGE" ]]; then
                  sed -i "s|<STAGE>|$STAGE|g" /opensearch-migrations/deployment/cdk/opensearch-service-migration/cdk.context.json
                fi

                npm install -g aws-cdk 2>&1
                npm install 2>&1
                ./buildDockerImages.sh
              encoding: plain
              mode: "000744"
              owner: root
              group: root
          commands:
            "000":
              command:
                Fn::Join:
                  - ""
                  - - echo "export MIGRATIONS_APP_REGISTRY_ARN=
                    - Fn::GetAtt:
                        - AppRegistry968496A3
                        - Arn
                    - ; export MIGRATIONS_USER_AGENT=AwsSolution/SO0290/v2.5.8; export VPC_ID=
                    - Ref: Vpc8378EB38
                    - ; export STAGE=
                    - Ref: Stage
                    - '" > /etc/profile.d/solutionsEnv.sh'
  BootstrapEC2InstanceLaunchTemplate3BA48394:
    Type: AWS::EC2::LaunchTemplate
    Properties:
      LaunchTemplateData:
        MetadataOptions:
          HttpTokens: required
      LaunchTemplateName: MigrationAssistantInfraCreateVPCBootstrapEC2InstanceLaunchTemplateE970D098
  CDKMetadata:
    Type: AWS::CDK::Metadata
    Properties:
      Analytics: v2:deflate64:H4sIAAAAAAAA/3VSXY8aMQz8LbyHHCD11Hsr3Z5OSNd2BSdeK6/xgo9sEiUOaLXa/17txwFH1aeZjMeO43ihm8X8Sc8mcI5T3B2nhgvdbATwqLLS/gTv2e47mkOAioSCgnP800QKJ0ZCEDBuD94H2nOUUOsmK+3Se8MIws52uWuKLgWkZYwO+SIvRQIXSegluOT/VW7srYqx0llpfzhMFVlRDJVu1s5Qf0GHuTOMdd/rwFY2ClikPLiSB+Od1CrChW62HrvgNs9GyHgXvhuHR5WnwjBuUmFJuuCVrV0SeoNiKDzoV+3uqX2gI8+rvINfIC8gdIZa5YFPIHQtvLJCwdLFMLQ0npYigId+Al21faAYf1tT3yeNuPX4bHfe8eDf5tnl2GeUgHTr2RCmwFJffuSz8DG+21F2/BWSxcMbVd6AUNuqjx9v1fzro55NwfgD6Nnk27hnDx3+d4dGe3O7Rp [...]
    Condition: CDKMetadataAvailable
Conditions:
  CDKMetadataAvailable:
    Fn::Or:
      - Fn::Or:
          - Fn::Equals:
              - Ref: AWS::Region
              - af-south-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-east-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-northeast-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-northeast-2
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-northeast-3
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-south-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-south-2
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-southeast-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-southeast-2
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-southeast-3
      - Fn::Or:
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-southeast-4
          - Fn::Equals:
              - Ref: AWS::Region
              - ca-central-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ca-west-1
          - Fn::Equals:
              - Ref: AWS::Region
              - cn-north-1
          - Fn::Equals:
              - Ref: AWS::Region
              - cn-northwest-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-central-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-central-2
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-north-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-south-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-south-2
      - Fn::Or:
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-west-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-west-2
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-west-3
          - Fn::Equals:
              - Ref: AWS::Region
              - il-central-1
          - Fn::Equals:
              - Ref: AWS::Region
              - me-central-1
          - Fn::Equals:
              - Ref: AWS::Region
              - me-south-1
          - Fn::Equals:
              - Ref: AWS::Region
              - sa-east-1
          - Fn::Equals:
              - Ref: AWS::Region
              - us-east-1
          - Fn::Equals:
              - Ref: AWS::Region
              - us-east-2
          - Fn::Equals:
              - Ref: AWS::Region
              - us-west-1
      - Fn::Equals:
          - Ref: AWS::Region
          - us-west-2
